--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				<!-- January 2021 -->
 				<a href="https://threejs-journey.xyz/" target="_blank" rel="noopener"><img src="files/projects/threejs-journey.png" loading="lazy"/></a>
 				<!-- December 2020 (bis) -->
-				<a href="https://github.com/home" target="_blank" rel="noopener"><img src="files/projects/github.png" loading="lazy"/></a>
+				<!-- <a href="https://github.com/home" target="_blank" rel="noopener"><img src="files/projects/github.png" loading="lazy"/></a> -->
 				<!-- December 2020 -->
 				<a href="https://spline.design/" target="_blank" rel="noopener"><img src="files/projects/spline.png" loading="lazy"/></a>
 				<a href="https://www.procedural.eu/" target="_blank" rel="noopener"><img src="files/projects/procedural-gl.png" loading="lazy"/></a>
