--- a/examples/webgl_nodes_playground.html
+++ b/examples/webgl_nodes_playground.html
@@ -95,7 +95,7 @@
 				renderer.outputEncoding = THREE.sRGBEncoding;
 				renderer.toneMapping = THREE.LinearToneMapping;
 				renderer.toneMappingExposure = 4000;
-				renderer.physicallyCorrectLights = true;
+				renderer.useLegacyLights = false;
 
 				renderer.domElement.className = 'renderer';
 
