Added zooming to cursor position in OrbitControls

--- a/examples/misc_controls_map.html
+++ b/examples/misc_controls_map.html
@@ -120,6 +120,7 @@
 
 				const gui = new GUI();
 				gui.add( controls, 'screenSpacePanning' );
+				gui.add( controls, 'enableZoomToCursor' );
 
 			}
 
