--- a/examples/misc_controls_orbit.html
+++ b/examples/misc_controls_orbit.html
@@ -39,6 +39,8 @@
 
 			import * as THREE from 'three';
 
+			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
+
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
 			let camera, controls, scene, renderer;
@@ -111,6 +113,10 @@
 				//
 
 				window.addEventListener( 'resize', onWindowResize );
+
+
+				const gui = new GUI();
+				gui.add( controls, 'enableZoomToCursor' );
 
 			}
 
