Update demo info with smooth motion and snap-turn

--- a/examples/webxr_vr_input_events.html
+++ b/examples/webxr_vr_input_events.html
@@ -12,7 +12,8 @@
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> vr - input events
 
 			<p> This example demonstrates the use of <a href="https://www.npmjs.com/package/@webxr-input-profiles/motion-controllers">Motion Controllers library</a> to create dynamic WebXR input mappings. Controls for the demo:<br />
-			Thumbstick / touchpad to move the cube in a plane<br />
+			Thumbstick and touchpad forward/backward to smoothly slide<br />
+			and left/right to snap-turn in 45-degree steps<br />
 			Trigger to pull the cube closer<br />
 			Squeeze to make the cube smaller<br />
 			Any of the buttons to randomize the cube's color
