--- a/examples/webgpu_audio_processing.html
+++ b/examples/webgpu_audio_processing.html
@@ -13,7 +13,7 @@
 
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Audio Processing
-			<br>Click on the screen to process the audio using WebGPU.
+			<br>Click on screen to process the audio using WebGPU.
 		</div>
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
