--- a/examples/webgpu_compute.html
+++ b/examples/webgpu_compute.html
@@ -31,7 +31,7 @@
 			import {
 				ShaderNode, compute,
 				uniform, element, storage, attribute, mul, sin, cos,
-				temp, assign, add, sub, cond, abs, negate, max, min, length, float, vec2, vec3, color,
+				add, sub, cond, abs, negate, max, min, length, float, vec2, vec3, color,
 				greaterThanEqual, lessThanEqual, instanceIndex
 			} from 'three/nodes';
 
@@ -81,7 +81,7 @@
 
 				// create function
 
-				const computeShaderNode = new ShaderNode( ( inputs, builder ) => {
+				const computeShaderNode = new ShaderNode( ( inputs, stack ) => {
 
 					const particle = element( particleBufferNode, instanceIndex );
 					const velocity = element( velocityBufferNode, instanceIndex );
@@ -89,18 +89,17 @@
 					const pointer = uniform( pointerVector );
 					const limit = uniform( scaleVector );
 
-					const position = temp( add( particle, velocity ), 'tempPos' ); // @TODO: this should work without 'tempPos' property name
-					position.build( builder );
+					const position = add( particle, velocity );
 
-					assign( velocity.x, cond( greaterThanEqual( abs( position.x ), limit.x ), negate( velocity.x ), velocity.x ) ).build( builder );
-					assign( velocity.y, cond( greaterThanEqual( abs( position.y ), limit.y ), negate( velocity.y ), velocity.y ) ).build( builder );
+					stack.assign( velocity.x, cond( greaterThanEqual( abs( position.x ), limit.x ), negate( velocity.x ), velocity.x ) );
+					stack.assign( velocity.y, cond( greaterThanEqual( abs( position.y ), limit.y ), negate( velocity.y ), velocity.y ) );
 
-					assign( position, max( negate( limit ), min( limit, position ) ) ).build( builder );
+					stack.assign( position, max( negate( limit ), min( limit, position ) ) );
 
 					const pointerSize = 0.1;
 					const distanceFromPointer = length( sub( pointer, position ) );
 
-					assign( particle, cond( lessThanEqual( distanceFromPointer, pointerSize ), vec3(), position ) ).build( builder );
+					stack.assign( particle, cond( lessThanEqual( distanceFromPointer, pointerSize ), vec3(), position ) );
 
 				} );
 
@@ -109,7 +108,7 @@
 				computeNode = compute( computeShaderNode, particleNum );
 				computeNode.onInit = ( { renderer } ) => {
 
-					const precomputeShaderNode = new ShaderNode( ( inputs, builder ) => {
+					const precomputeShaderNode = new ShaderNode( ( inputs, stack ) => {
 
 						const particleIndex = float( instanceIndex );
 
@@ -121,7 +120,7 @@
 
 						const velocity = element( velocityBufferNode, instanceIndex );
 
-						assign( velocity.xy, vec2( velX, velY ) ).build( builder );
+						stack.assign( velocity.xy, vec2( velX, velY ) );
 
 					} );
 
