--- a/examples/webgl_loader_svg.html
+++ b/examples/webgl_loader_svg.html
@@ -88,6 +88,9 @@
 
 				gui.add( guiData, 'currentURL', {
 
+					"singlePointTest": 'models/svg/singlePointTest.svg',
+					"singlePointTest2": 'models/svg/singlePointTest2.svg',
+					"singlePointTest3": 'models/svg/singlePointTest3.svg',
 					"Tiger": 'models/svg/tiger.svg',
 					"Three.js": 'models/svg/threejs.svg',
 					"Joins and caps": 'models/svg/lineJoinsAndCaps.svg',
