--- a/examples/webgpu_compute.html
+++ b/examples/webgpu_compute.html
@@ -31,8 +31,7 @@
 			import {
 				ShaderNode, compute,
 				uniform, element, storage, attribute, mul, sin, cos,
-				add, sub, cond, abs, negate, max, min, length, float, vec2, vec3, color,
-				greaterThanEqual, lessThanEqual, instanceIndex
+				add, cond, abs, max, min, float, vec2, vec3, color, instanceIndex
 			} from 'three/nodes';
 
 			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
